# laser-egg

./: .gitignore  Dockerfile  LICENSE  README.md  laser-egg.cabal  stack.yaml
deploy/: aqi.yml  grafana-dashboard.json  prometheus.yml
src/: Main.hs
