name:                laser-egg
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ford-prefect/laser-egg#readme
license:             BSD3
license-file:        LICENSE
author:              Arun Raghavan
maintainer:          arun@arunraghavan.net
copyright:           BSD2
category:            IoT
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable laser-egg
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       aeson >= 1.4 && < 2,
                       http-types >= 0.12 && < 1.0,
                       lens >= 4.17 && < 5,
                       prometheus-client >= 1.0 && < 2,
                       text >= 1.2 && < 2,
                       time >= 1.6 && < 2,
                       timerep >= 2 && < 3,
                       wai >= 3.2 && < 4,
                       wai-middleware-prometheus >= 1.0 && < 2,
                       warp >= 3.2 && < 4,
                       wreq >= 0.5 && < 0.6
